添加Render部署配置文件和生产环境优化

--- a/.gitignore
+++ b/.gitignore
@@ -37,12 +37,20 @@ env/
 .DS_Store
 Thumbs.db
 
-# Project specific
+# Project specific - keep structure but ignore generated content
 uploads/*.csv
 uploads/*.json
 *.png
 *.log
 
+# Keep uploads directory structure
+!uploads/.gitkeep
+
 # Sensitive data
 config.ini
 .env
+
+# Local development
+*.db
+*.sqlite
+*.sqlite3
