feat: 更新Render部署配置支持SocketIO和生产环境
- 更新render.yaml：配置Flask-SocketIO生产环境启动
- 新增start.py：专用的生产环境启动脚本
- 更新requirements.txt：添加flask-socketio和eventlet依赖
- 增强build.sh：添加SocketIO库安装和依赖验证
- 新增.renderignore：优化部署文件过滤
- 更新Procfile：使用新的启动脚本
- 新增DEPLOY.md：详细的部署说明文档
- 修复Git配置：设置用户信息完成同步

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,15 @@ config.ini
 *.db
 *.sqlite
 *.sqlite3
+
+# Development files (不部署到生产环境)
+bebug.py
+mb-oula.py
+mb.py
+mega_millions_analyzer.py
+math.py
+3data.html
+
+# Large data files (会在线下载)
+Lottery_Mega_Millions_Winning_Numbers_Beginning_2002.csv
+magemw.csv
